# seer

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: quantization_notes.md
notebooks/: train_colab.ipynb
scripts/: fetch_models.py  train_all.sh
seer/: __init__.py  datautil.py  icao9303.py
seer/api/: __init__.py  main.py  schemas.py
seer/face/: __init__.py  calibrate.py  embed.py  verify.py
seer/forensics/: __init__.py  dataset.py  model.py  signals.py  train.py
seer/localize/: __init__.py  dataset.py  model.py  rectify.py  train.py
seer/ocr/: __init__.py  charset.py  crnn.py  dataset.py  fields.py  reader.py  train.py
seer/runtime/: __init__.py  bench.py  export.py  pipeline.py  quantize.py
seer/synth/: __init__.py  compose.py  face.py  fonts.py  generate.py  identity.py  tamper.py  template.py
tests/: test_api.py  test_datautil.py  test_face.py  test_forensics.py  test_icao9303.py  test_localize.py  test_ocr.py  test_runtime.py  test_synth.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: HeatmapCanvas.tsx  ReportView.tsx  UploadCard.tsx
web/lib/: api.ts
