[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seer-kyc"
version = "0.1.0"
description = "KYC document verification: synthetic-data-trained localization, OCR, face verification and tamper forensics on a CPU latency budget"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lucas Maingi" }]
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.2",
    "faker>=24.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.setuptools.packages.find]
include = ["seer*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
